basic grid layout + basic taskbar

--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="images/SnoopyFav.png">
   <title>Richie Tran</title>
 </head>
 <body>
-  <h1>Richie's Portfolio</h1>
-  <p>hi</p>
   <img
     src=""
     alt="snoopy"
     id="snoopy">
 </body>
+<footer>
+</footer>
 </html>
