separate apps grid from body + created apps class

--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,11 @@
   <title>Richie Tran</title>
 </head>
 <body>
-  <img
-    src=""
-    alt="snoopy"
-    id="snoopy">
+  <main class="appGrid">
+    <span class="app">
+      <img id="snoopy" src="images/Snoopy.png" alt="Snoopy Image">
+    </span>
+  </main>
 </body>
 <footer>
 </footer>
