first app icon and title

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
 <body>
   <main class="appGrid">
     <span class="app">
-      <img id="snoopy" src="images/Snoopy.png" alt="Snoopy Image">
+      <img id="abtMe" src="images/AbtMe.png" alt="About Me">
+      <p>About Me</p>
     </span>
   </main>
 </body>
