added javascript file + working app clicking (not opening)

--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,17 @@
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="images/SnoopyFav.png">
   <title>Richie Tran</title>
+  <script src="mainApp.js" defer></script>
 </head>
 <body>
   <main class="appGrid">
-    <span class="app">
-      <img id="abtMe" src="images/AbtMe.png" alt="About Me">
+    <span class="app" id="aboutMeApp">
+      <img id="abtMe" src="images/AbtMe.png" alt="about me">
       <p>About Me</p>
+    </span>
+    <span class="app" id="resumeApp">
+      <img id="resume" src="images/Resume.png" alt="Resume">
+      <p>Resume</p>
     </span>
   </main>
 </body>
