background and added resume and contact apps

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
 </head>
 <body>
   <main class="appGrid">
+    <span class="backgroundImg">
+      <img id="background" src="images/Background.png">
+    </span>
     <span class="app" id="aboutMeApp">
       <img id="abtMe" src="images/AbtMe.png" alt="about me">
       <p>About Me</p>
@@ -17,6 +20,10 @@
     <span class="app" id="resumeApp">
       <img id="resume" src="images/Resume.png" alt="Resume">
       <p>Resume</p>
+    </span>
+    <span class="app" id="emailApp">
+      <img id="email" src="images/Email.png" alt="Email">
+      <p>Contact Me!</p>
     </span>
   </main>
 </body>
