skills and socials apps + updated icons

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <main class="appGrid">
-    <span class="backgroundImg">
+    <span class="backgroundImg" ondragstart="return false;">
       <img id="background" src="images/Background.png">
     </span>
     <span class="app" id="aboutMeApp">
@@ -21,9 +21,17 @@
       <img id="resume" src="images/Resume.png" alt="Resume">
       <p>Resume</p>
     </span>
+    <span class="app" id="socialsApp">
+      <img id="socials" src="images/Socials.png" alt="Socials">
+      <p>Socials</p>
+    </span>
+    <span class="app" id="skillsApp">
+      <img id="skills" src="images/Skills.png" alt="Skills">
+      <p>Skills</p>
+    </span>
     <span class="app" id="emailApp">
       <img id="email" src="images/Email.png" alt="Email">
-      <p>Contact Me!</p>
+      <p>Email Me!</p>
     </span>
   </main>
 </body>
