--- a/public/index.html
+++ b/public/index.html
@@ -36,5 +36,9 @@
   </main>
 </body>
 <footer>
+  <span class="start"></span>
+  <span class="time">
+    <span id="currentTime"></span>
+  </span>
 </footer>
 </html>
