time container basically finished (can add calender) speaker click to mute working

--- a/public/index.html
+++ b/public/index.html
@@ -34,11 +34,13 @@
       <p>Email Me!</p>
     </span>
   </main>
+  <span class="blank"></span>
 </body>
 <footer>
   <span class="start"></span>
   <span class="time">
-    <span id="currentTime"></span>
+    <span class="speaker"></span>
+    <span class="clock" id="currentTime"></span>
   </span>
 </footer>
 </html>
