--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
   <main class="appGrid">
     <span class="backgroundImg" ondragstart="return false;">
       <img id="background" src="images/Background.png">
+      <p>Welcome to Richie Tran's portfolio!</p>
     </span>
     <span class="app" id="aboutMeApp">
       <img id="abtMe" src="images/AbtMe.png" alt="about me">
