--- a/public/index.html
+++ b/public/index.html
@@ -14,23 +14,23 @@
       <img id="background" src="images/Background.png">
       <p>Welcome to Richie Tran's portfolio!</p>
     </span>
-    <span class="app" id="aboutMeApp">
+    <span class="app" id="About Me">
       <img id="abtMe" src="images/AbtMe.png" alt="about me">
       <p>About Me</p>
     </span>
-    <span class="app" id="resumeApp">
+    <span class="app" id="Resume">
       <img id="resume" src="images/Resume.png" alt="Resume">
       <p>Resume</p>
     </span>
-    <span class="app" id="socialsApp">
+    <span class="app" id="Socials">
       <img id="socials" src="images/Socials.png" alt="Socials">
       <p>Socials</p>
     </span>
-    <span class="app" id="skillsApp">
+    <span class="app" id="Skills">
       <img id="skills" src="images/Skills.png" alt="Skills">
       <p>Skills</p>
     </span>
-    <span class="app" id="emailApp">
+    <span class="app" id="Email Me">
       <img id="email" src="images/Email.png" alt="Email">
       <p>Email Me!</p>
     </span>
