resume window and socials window + switched skills to projects

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="images/SnoopyFav.png">
+  <link rel="icon" href="SnoopyFav.ico">
   <title>Richie Tran</title>
   <script src="mainApp.js" defer></script>
 </head>
@@ -15,7 +15,7 @@
       <p>Welcome to Richie Tran's portfolio!</p>
     </span>
     <span class="app" id="About Me">
-      <img id="About MeImg" src="images/AbtMe.png" alt="about me">
+      <img id="About MeImg" src="images/AbtMe.png" alt="About Me">
       <p>About Me</p>
     </span>
     <span class="app" id="Resume">
@@ -26,9 +26,9 @@
       <img id="SocialsImg" src="images/Socials.png" alt="Socials">
       <p>Socials</p>
     </span>
-    <span class="app" id="Skills">
-      <img id="SkillsImg" src="images/Skills.png" alt="Skills">
-      <p>Skills</p>
+    <span class="app" id="Projects">
+      <img id="ProjectsImg" src="images/Projects.png" alt="Projects">
+      <p>Projects</p>
     </span>
     <span class="app" id="Email Me">
       <img id="Email MeImg" src="images/Email.png" alt="Email">
