email window, but not the script to email me yet

--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,8 @@
       <img id="ProjectsImg" src="images/Projects.png" alt="Projects">
       <p>Projects</p>
     </span>
-    <span class="app" id="Email Me">
-      <img id="Email MeImg" src="images/Email.png" alt="Email">
+    <span class="app" id="Email Me!">
+      <img id="Email Me!Img" src="images/Email.png" alt="Email">
       <p>Email Me!</p>
     </span>
   </main>
