start button, switched projects to experience

--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,9 @@
       <img id="SocialsImg" src="images/Socials.png" alt="Socials">
       <p>Socials</p>
     </span>
-    <span class="app" id="Projects">
-      <img id="ProjectsImg" src="images/Projects.png" alt="Projects">
-      <p>Projects</p>
+    <span class="app" id="Experience">
+      <img id="ExperienceImg" src="images/Experience.png" alt="Experience">
+      <p>Experience</p>
     </span>
     <span class="app" id="Email Me!">
       <img id="Email Me!Img" src="images/Email.png" alt="Email">
@@ -38,7 +38,10 @@
   <span class="blank"></span>
 </body>
 <footer>
-  <span class="start"></span>
+  <span class="start">
+    <span class="startImg"></span>
+    <span>Start</span>
+  </span>
   <span class="time">
     <span class="speaker"></span>
     <span class="clock" id="currentTime"></span>
