--- a/public/index.html
+++ b/public/index.html
@@ -15,23 +15,23 @@
       <p>Welcome to Richie Tran's portfolio!</p>
     </span>
     <span class="app" id="About Me">
-      <img id="About MeImg" src="images/AbtMe.png" alt="About Me">
+      <img class="appImg" id="About MeImg" src="images/AbtMe.png" alt="About Me">
       <p>About Me</p>
     </span>
     <span class="app" id="Resume">
-      <img id="ResumeImg" src="images/Resume.png" alt="Resume">
+      <img class="appImg" id="ResumeImg" src="images/Resume.png" alt="Resume">
       <p>Resume</p>
     </span>
     <span class="app" id="Socials">
-      <img id="SocialsImg" src="images/Socials.png" alt="Socials">
+      <img class="appImg" id="SocialsImg" src="images/Socials.png" alt="Socials">
       <p>Socials</p>
     </span>
     <span class="app" id="Experience">
-      <img id="ExperienceImg" src="images/Experience.png" alt="Experience">
+      <img class="appImg" id="ExperienceImg" src="images/Experience.png" alt="Experience">
       <p>Experience</p>
     </span>
     <span class="app" id="Email Me!">
-      <img id="Email Me!Img" src="images/Email.png" alt="Email">
+      <img class="appImg" id="Email Me!Img" src="images/Email.png" alt="Email">
       <p>Email Me!</p>
     </span>
   </main>
