clicking buttons effect

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
   <span class="blank"></span>
 </body>
 <footer>
-  <span class="start">
+  <span class="start button">
     <span class="startImg"></span>
     <span>Start</span>
   </span>
