updated resume and background

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <main class="appGrid">
     <span class="backgroundImg" ondragstart="return false;">
       <img id="background" src="images/Background.png">
-      <p>Welcome to Richie Tran's portfolio!</p>
+      <p>Welcome to Richie Tran's portfolio! It's still a work in progress:)</p>
     </span>
     <span class="app" id="About Me">
       <img class="appImg" id="About MeImg" src="images/AbtMe.png" alt="About Me">
